Lua extension watchdog crashes
Triggering the Lua extension watchdog and killing the extension crashes the entire process. (Currently, this is easily reproducible with VLsub as opensubtitles.org is dead, but YMMV.)
[00006120000807f8] lua generic debug: Killing extension now
[00006120000807f8] lua generic debug: [VLsub] Bye bye!
[00006120000807f8] lua generic warning: Error while running script /home/remi/videolan/vlc/share/lua/extensions/VLSub.lua, function deactivate(): attempt to
[00006120000807f8] lua generic warning: Error while running script /home/remi/videolan/vlc/share/lua/extensions/VLSub.lua, function (null)(): 0
[00006120000807f8] lua generic warning: Could not translate click
LibVLC fatal error unlocking mutex (1) in thread 389 at ../../src/posix/thread.c:232 in vlc_mutex_unlock
[00006120000807f8] lua generic debug: Deleting dialog 'VLSub 0.9'
[00006120000807f8] lua generic debug: Waiting for the dialog to be deleted...
[00006120000294f8] qt interface debug: Deleting extension dialog 'VLSub 0.9'
/usr/lib/x86_64-linux-gnu/libasan.so.3(backtrace+0x41)[0x7ff6703187c1]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.8(+0x63d9bd)[0x7ff66d7ce9bd]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.8(+0x63dae7)[0x7ff66d7ceae7]
/home/remi/videolan/vlc/build/src/.libs/libvlccore.so.8(vlc_mutex_unlock+0x62)[0x7ff66d7cfb74]
/home/remi/videolan/vlc/build/modules/.libs/liblua_plugin.so(+0xbe741)[0x7ff64794c741]
/home/remi/videolan/vlc/build/modules/.libs/liblua_plugin.so(+0xc3d72)[0x7ff647951d72]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x7464)[0x7ff66f074464]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x5f)[0x7ff66ebb39df]
Thread error: Argument invalide
==32722==WARNING: ASan is ignoring requested __asan_handle_no_return: stack top: 0x7ff647618f40; bottom 0x7ff64147e000; size: 0x00000619af40 (102346560)
False positive error reports may follow
For details see http://code.google.com/p/address-sanitizer/issues/detail?id=189
Abandon
Looks like use after free.