lua: Fix deadlock when deactivating extension due to timeout.

lua_ExecuteFunctionVa is not meant to be called with the command_lock
held.
This partially reverts 7a94f2e6b22bad255ddcca6e095ed33bc4803e45
Fix #17565